--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -31,6 +31,8 @@
 	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "node",
 	"features": {
+		"forwardPorts": [2003, 5000,4000],
+		"github-cli": "latest",
 		"git": "latest",
 		"sshd": "latest",
 		"python": "latest"
